pre-populate edit and plain admin.html redirect

--- a/website/templates/edit.html
+++ b/website/templates/edit.html
@@ -4,7 +4,7 @@
     <h3 align="center">Edit Profile</h3>
     <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter First Name"/>
+        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter First Name" value="{{user.firstName}}"/>
     </div>
     <br/>
     <button type="submit" class="btn btn-primary">Edit</button>
